--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@ layout: default
 ---
 <h2> Notebook for Thesis </h2>
 
-This is essentially my notebook for my thesis. Here, I detail various projects I am working on. I talk about what worked, what failed, what I hope to do, and what I am currently doing. Hopefully, this keeps me on track with my work and helps with deadlines.
+<p>This is essentially my notebook for my thesis. Here, I detail various projects I am working on. I talk about what worked, what failed, what I hope to do, and what I am currently doing. Hopefully, this keeps me on track with my work and helps with deadlines.</p>
 
-Nkiruka Uzuegbunam
+<p>The site is a work in progress. The format is not pretty, but sorts my work into thoughts (blog posts) which can range from current projects to other interests, and ongoing work (research). Makes for easier sharing and discussion</p>
+
+<p>It uses pieces from <a href = "https://www.taniarascia.com/make-a-static-website-with-jekyll/">Tania</a>, <a href = "http://karpathy.github.io/">Andrej</a>, and <a href = "https://casual-effects.com/markdeep/features.md.html">Morgan</a> creator of Markdeep for my research pages.</p>
+
+<p> Nkiruka Uzuegbunam </p>
