Updated assets to include assets for contrast enhancement

--- a/research/index.html
+++ b/research/index.html
@@ -7,6 +7,11 @@ layout: default
       <li>
         <a href="{{ site.baseurl }}/_researchPages/one_way_mirror.md.html"> Physics of One-way/Two-way mirror </a>
       </li>
+
+        <li>
+        <a href="{{ site.baseurl }}/_researchPages/contrast_model.md.html"> RoboMirror, a Two-way mirror application</a>
+      </li>
+      
       </h3>
 
     
