--- a/_researchPages/contrast_model.md.html
+++ b/_researchPages/contrast_model.md.html
@@ -1,117 +1,82 @@
                 <meta charset="utf-8" emacsmode="-*- markdown -*-">
-                            **RoboMirror and Contrast Enhancement Model**
+                  **Contrast Enhancement Model for a Two-way Mirror**
                             		Nkiruka Uzuegbunam
 
-
-
-Studing Transmission of Light through a One-way (Two-way) Mirror
+Filming through a Two-way Mirror: Contrast Enhancement model
 ===============================================================================
 
-This post investigates vision through a partially hazing in indoor scenes. In particular, as part of my thesis, I am studying the transmission of light through one-way/two-way mirrors. Please comment, send corrections, ask questions, or as always, cite appropriately. 
+This post describes my research into enhancing images taken through a Two-way mirror (TWM).
+In particular, I seek to derive from first principles, the radiance hitting the camera from the transparent side of a TWM. This involves modeling the transmission of light and also the effects of haze in the degredation of the image.
 
 [Click here](../index.html) to navigate back to home page.
 
-What are One-way/Two-way Mirrors?
+What are TWMs and how do they work?
 -------------------------------------------------------------------------------
-One-way/Two-way mirrors (TWMs) are partially reflective and partially transparent constructions.
-Typically, TWMs are composed of a transparent medium, and a reflective medium. Glass, acrylic or
-polycarbonate subtrate is used as the transparent medium. The reflective medium is usually a metal
-such as aluminium or silver. 
+One-way/Two-way mirrors (TWMs) are partially reflective and partially transparent constructions, typically composed of a transparent medium, thinly coated on one side by a reflective medium. Often used in security, entertainment, observation, they are designed to provide privacy in various situations. 
+
+Unlike plane mirrors (common everyday mirror), TWMs are generally designed to allow light to pass equally in both directions. TWM will appear like a plane mirror when one side of the mirror is *much more* brightly lit than the other side. Most TWM vendors state that the reflective side (i.e. the metal coated side) should face the brightly lit room, while the transparent layer faces the darker room. The reason for this can be seen in the figure below. Further information as to the physics and uses of TWMs can be found in my earlier post, [here](one_way_mirror.md.html). 
 
 
-What are One-way/Two-way Mirrors Used for?
+![Figure [model1]: Essential operation of a TWM. Picture obtained from TWM Vendor site: http://www.twowaymirrors.com/](../assets/how-does-a-two-way-mirror-work.jpg) 
+
+
+Degredation of Image taken through a TWM
 -------------------------------------------------------------------------------
-One-way (often called Two-way) mirrors are used for security, observation, teleprompter, windows, e.t.c.
-They are designed to provide privacy in various situations. 
+Consider the scenerios depicted below. In the first scenerio, Figure [model2], the camera views the scene without any obstructions. It is able to receive all the light from the object and from the environment. Let us call the radiance of the object, i.e, the transmitted light from the object, $L_{T}$. *I ignore radiance from the environment. I don't know if I should model it. I will update as I need to. * 
+
+The radiance from the scene that hits the camera forms the image. Incoming radiance is termed irradiance, and let us call the irrandiance on the camera, hence, the image formed, $I\left(x\right)$. I make it dependent on the pixel location as different points on the camera receive different amounts of light. Thus, with no obstruction, the image formed will be:
+
+$ I\left(x\right) \approx L_{T} $
 
 
-How do One-way/Two-way  Mirrors work?
--------------------------------------------------------------------------------
-A normal mirror, here I assume a plane mirror, is most commonly, essentially a plate of glass, coated with a reflective coating, most often silver or aluminium. The metal coat allows the mirror to reflect most of the light
-that hits it, creating the reflection we see in the mirror. 
+![Figure [model2]: Light from object and environment reaches camera without obstruction](../assets/SceneWithoutMirror2.png)
 
 
-![Figure [mirror1]: Metal coating on a mirror reflects most of the light hitting the mirror, creating reflections. Picture obtained from Wikipedia, https://upload.wikimedia.org/wikipedia/commons/5/52/Mirror.jpg](../assets/Mirror.jpg)
+In the second scenario, Figure [model3], the camera views the scene with the TWM in the way. I assume the camera faces the transparent side of the TWM. The object faces the reflective side of the TWM. 
+
+![Figure [model3]: Light from object and environment reaches camera *after* passing through the TWM obstruction](../assets/SceneWithMirror.png)
 
 
-TWMs are generally designed to allow light to pass equally in both directions. This is by coating a transparent medium
-with a very thin, almost transparent layer of metal. The sparse distribution of the metal molecules ensures that some light is reflected, while the rest pass through the TWM.
+As such, we have that the image formed depends on some function of the radiance it receives from the object, with some added noise:
 
-TWM will appear like a plane mirror when one side of the mirror is *much more* brightly lit than the other side. Most TWM vendors state that the reflective side (i.e. the metal coated side) should face the brightly lit room, while the transparent layer faces the darker room. The reason for this can be seen in the figure below. Assume a 2-room scenerio. Room A is brightly lit. Room B is dark, with very little light. The TWM is mounted in a gap on the wall connecting Room A to Room B. The reflective side of the TWM faces into room A. The transparent side of the TWM faces into room B.
+$ I\left(x\right) = {f}\left( L_{T} \right) + noise $
 
-
-![Figure [mirror2]: Essential operation of a TWM. Picture obtained from TWM Vendor site: http://www.twowaymirrors.com/](../assets/how-does-a-two-way-mirror-work.jpg) 
+The question is: *what is this function?*
 
 
-Recall, in physics class that when light hits an object, it is either reflected, refracted (i.e. transmitted), absorbed or does some combination of the three actions. As such, when light from room A that hits the reflective side of the TWM, most of it is reflected back into room A creating a reflection in the mirror. A large portion of the remaining light is refracted and tranmitted through the TWM into room B, to the user facing the transparent medium in room B. 
-
-The light in room B is *much much less* than the light in room A. As such, the transmitted light into room B, from room A, is also much greater than any amount of light sent from room B to room A. Recall in image processing class, that we are able to see objects only because light reflects off the objects into our eyes. Hence, a user in room B, can see clearly into room A, without being distracted by any light coming from room B.
-
-Math of One-way/Two-way Mirrors for a Few scenarios
--------------------------------------------------------------------------------
-As stated, research into vendor design of TWMs shows that most are designed with transparent medium and a reflective medium. The transparent medium is most commonly glass or acrylic or polycarbonate subtrate. The reflective medium is most commonly a semi-transparent, very thin, layer of metal like aluminium (Al) or silver (Ag). The refractive indices for the materials are shown in the table below. Refractive index of a material is dimensionless, given by the ratio of the speed of light in a vacuum to the speed of light in the material:
-
-$ n = $ refractive index $ = \frac{c}{v} $ where c = speed of light in vacuum $\approx$ 3.0 x $10^8$ m/s, v = speed of light in medium.
-
-The refractive index is used in the calculation of the reflection coefficient, and hence the reflectance of the materials. Reflectance is the ratio of reflected light power to incident/incoming light power. For non-magnetic media, at normal incidence (light hits perpendicular to the medium, 0 degrees from the normal) it is defined as:
-
-$ R = $ reflectance $ = \left(\frac{n_{1} - n_{2}}{n_{1} + n_{2}}\right)^2  $ where $n_i$ is the refractive index of medium i.
+For my scenerio, the before and after photos of a static scene taken without, and with the TWM in place are shown below. In top row are images taken with right camera of a stereo camera. In the middle row are images taken with the left camera of a stereo camera. In the last two rows are images taken with the Microsoft Kinect v2 color camera.
 
 
-Material | Refractive Index |
----------| -----------------
-Glass    | 1.50
-Acrylic  | 1.490
-Polycarbonate | 1.585
-Silver   | 0.151
-Aluminium| 1.097
-Air      | 1.0
-[Table [refractiveIndex]: Refractive indices of Common TWM materials. Numbers obtained from http://refractiveindex.info/. Any general optics text should have similar tables]
+![Figure [model4a]: Left Image without TWM](../assets/camera1_stereo_before1.png width="300px" border="1")  ![Figure [model4b]: Left Image with TWM](../assets/camera1_16.png width="300px" border="1")
+![Figure [model4c]: Right Image without TWM](../assets/camera2_stereo_before2.png width="300px" border="1")  ![Figure [model4d]: Right Image with TWM](../assets/camera2_8.png width="300px" border="1")
+![Figure [model4e]: Kinect Image without TWM](../assets/colorKinect_before1.png width="300px" border="1")  ![Figure [model4f]: Kinect Image with TWM](../assets/colorKinect_after1.png width="300px" border="1")
+![Figure [model4g]: Kinect Image without TWM](../assets/colorKinect_before2.png width="300px" border="1")  ![Figure [model4h]: Kinect Image with TWM](../assets/colorKinect_after2.png width="300px" border="1")
 
 
-Using the reflectance, we can verify the optical properties of the TWM. 
+From right column of Figure 4 above, we can see two things across all images:
 
-Consider the scenerios depicted below. Label, as indicated, the light entering the TWM, passing from air to metal, metal to glass, then back to glass. 
+1. The image is consistently darker. This implies a reduction in amount of light reaching the image. It is darker for stereo camera than for the kinect camera. In addition, image of the torch in top 3 figures is different for the kinect camera (third row) than for the stereo camera (top 2 rows above). The saturated pixels about the torch in third row appears to be larger in the after image. This is in contrast to stereo images. In the top two rows, the saturated pixels about the torch in the stereo images appear to reduce in area in the after image. This suggests that the stereo camera employs an auto correction function, perharps contrast equalization function. In contrast, the Microsoft Kinect does not employ any correction algorithms (as far as I know). Hence, in order to capture the true function affecting the irradiance of the camera, I need to use a camera with no auto correction algorithms. Thus, I am ignoring data collected with the stereo camera and using only the data from Kinect color camera for reconstruction. 
 
+2. The image is hazy, appearing blurred in some places (Figure [model4f], Figure [model4h]). In addition, as stated in first point, the TWM appears to have increased the number of saturated pixels overall in the image (see Figure [model5] below). This implies some sort of convolution and some noise. For noise, I am thinking some kind of salt-and-pepper noise given the speckle looking nature of the picture. For the convolution, it may be a directional blur (moving from bottom left to top right). I think this is plausible given the introduction of a new light streak running across the blue folder and the shape of the reflection on the side of the red folder.
 
-![Figure [mirror3]: General Scenario. Light from the bulb hits the book. A portion of this light is reflected to the TWM, at an angle $\theta_{1}$ to the normal N. The TWM transmits a portion of this light. Clip art of table, books, and bulb obtained from openclipart.org](../assets/opticsMirror1.png)
+3. Finally, *this* TWM appears to have some deterministic artifacts (not random) as evidenced by the single white pixel in Figure [model5] that appears in Figure [model4f] and Figure [model4h]. If it was random, the bright spot would not be in the same location for two different pictures. This implies I should either clean the TWM or it has some structural qualities that produce that each time. I will need to verify this by taking more images. 
 
-
-![Figure [mirror4]: Optics at boundary of TWM. Input light power from book of radiance L is transmitted through the metal. The transmitted radiance is decreased to $L_{1}$. Passage from the metal to glass further decreases radiance to $L_{2}$. Passage from glass back to air results in final radiance $L_{3}$](../assets/opticsMirror2.png)
-
-
-Let us calculate the transmitted radiance in Scenario 1 (S.1) shown in Figure [mirror4]. Assume normal incidence, i.e. light strikes along normal N meaning $\theta_{1}$ shown in Figure [mirror3] is 0. Also, assume the reflective metal coating is silver, Ag, while the transparent medium is glass.. Using the refractive indices in Table [refractiveIndex], we can calculate the reflectance as follows:
-
-$R_{air}^{Ag} = \left(\frac{n_{air} - n_{Ag}}{n_{air} + n_{Ag}}\right)^2 = \left(\frac{1 - 0.151}{1 + 0.151}\right)^2 \approx 0.74 \Rightarrow 74$% of light L is reflected, leaving $\approx$ 26% to pass through. Hence, $L_{1} = 0.26L$.
-
-Repeating this for the remaining scenarios, we have:
-
-$R_{Ag}^{glass} = \left(\frac{n_{Ag} - n_{glass}}{n_{Ag} + n_{glass}}\right)^2 = \left(\frac{0.151 - 1.5}{0.151 + 1.5}\right)^2 \approx 0.67$.
-This means that $\Rightarrow 67$% of $L_{1}$ is reflected. Thus, $L_{2}= (1-0.67) * 0.26 * L \approx 0.0858L$ is transmitted. 
-
-$R_{glass}^{air} = \left(\frac{n_{glass} - n_{air}}{n_{glass} + n_{air}}\right)^2 = \left(\frac{1.5 - 1.0}{1.5 + 1.0}\right)^2 \approx 0.04$.
-This means that $\Rightarrow 4$% of $L_{2}$ is reflected. Thus, $L_{3}= (1-0.04) * 0.0858 * L \approx 0.0824L$ is transmitted.
-
-Hence, only about 8% of input radiance is transmitted. Then, assuming pure reflection at each boundary (no loss of light from absorption, or other scattering), this means that $\approx$ 92% of the input light is reflected by the TWM, with the bulk of the reflection occuring at the boundary of air and metal. 
-
-*Note: I noticed the same result happens if we go the other direction. That is, light moves from air to glass to metal to air. Some vendors claim that the TMW must be setup in a particular direction for effective privacy. This may be a result of their production process or for aesthetics or other subjective viewing purposes. This may also be due to the metal providing the most direct reflection. As light does not need to be bent as it passes from metal to glass to air, we get the most undistorted reflection occuring at the boundary of metal and air.* 
-
-**Privacy via TWM**
-
-The TWM achieves privacy when the amount of light on the reflecting side is *much much* larger than the light on the transparent side. Using our calculations above, assume a result of 91% reflectance, with 9% transmission. I did the calculations a little different in my notes but the method is the same. With the figure below, assume the light $L^{A} \gg L^{B}$ such that $L^{A} > 100*L_{B}$. Two things happen in this setup:
-
-* The light reaching room B, composed of reflection from room B, and transmittance from room A is essentially $L_{B} = 0.09*L_{A} + 0.91*L_{B} = 0.09*100*L_{B} + 0.91 * L_{B} \approx 9*L_{B}$. The light transmitted from A to room B is much larger than reflections from B. Hence, light transmitted from A dominates, and person in room B can observe what is room A.
-
-* The light reaching room A, composed of reflection from room B, and transmittance form B is essentially $L_{A} = 0.91*L_{A} + 0.09*L_{B} \approx 0.91*L_{A}$. The reflection from room A back into room A is much larger than transmittance from room B. Hence, reflections from A dominate, and the person in room A can only see their reflections in the TWM in room A.
+![Figure [model5]: Saturated pixels, blurring, speckle caused by TWM in kinect images](../assets/mirrorDefects.png)
 
 
-![Figure [mirror5]: Reflection and transmittance of radiance L on both sides of the TWM](../assets/opticsMirror3_1.png)
+In order to decipher what is happening and what to do, I researched, and am researching, several different lines of work:
 
+0. Contrast Enhancement: 
 
-Application of One-way/Two-way Mirrors for Therapy
--------------------------------------------------------------------------------
-In my project, RoboMirror, a setup for Augmented/Mixed Reality designed for face-focused interactions, we use a TWM and a camera mounted on a robotic arm (see figure below). The robotic arm follows the user in front of the TWM, and the image from the camera is piped back to the user, and displayed on the TWM. Hence, the user sees a modified reflection of themselves rather than thier pure reflection. This is designed to be used for therapeutic activities, mixed or augmented reality since the camera image can be modified any which way before being sent to the TWM for display.
+	a. I inherited this project from my colleague, Yuqi Zhang. She tried various options such as adaptive histogram, CLAHE histogram method, and histogram equalization methods available in MATLAB $^{TM}$, and OpenCV. She used a model of the form, $ I\left(x\right) = g (f * L) $. She obtained g by a polynomial fit of the points derived from imaging constant amplitude pictures. Then she obtained the parameters of f using a regression. She achieved much better enhancement results than CLAHE, and other adaptive histogram methods. However, it is a long and tedious process that, I believe, can be improved upon with current research in image reconstruction. In particular, I was interested in areas that employed a prior in the image enhancement process, i.e., where some (input, output) were available. 
 
+1. Weiner Filtering: 
+
+	a. Model: I looked at the problem like it was Channel estimation in signal processing. In this case, we know input, X, we know the output, Y, and we want the inverse of the channel that produced Y. That is, $ Y = H ( X ) $, where H is the channel operating on X. The inverse, $H^{-1}$, should, in theory, produce a clean Y. So, in general, doing this: $ fft(H) = \frac{fft(Y)}{fft(X)} $ should get the channel (take an average over several inputs). Then an $H^{-1}$ should pop out in theory. Theory always needs to be refined with practice in the particular problem. That did not work out so well. Going to a full Weiner filter as described in many Image Processing texts did not work out either. So, I moved on to see what the present literature on various forms of image reconstruction were. First, I looked at deblurring since the TWM images have a hazy looking (handwavyyy) quality.
+
+2. Deblurring (Blind or Non-Blind deconvolution): 
+
+	a. Model :  $ f(x) = k * I(x) + noise $ . Noise is usually Guassian, and k is the convolutional kernel. If known, it is Non-Blind deconvolution, else it is Blind deconvolution. This model did not fit, at first, because the TWM images did not appear blurred as the images in many of the papers I read. In addition, many of these papers talked of blurring reconstruction as recovering an image that had undergone camera motion. My system had no camera motion. This discouraged me and led me to look to other processes. This led me to hazing. 
 
 Summary
 -------------------------------------------------------------------------------
