Updating research pages list to include pages for zoom, resistor, and security

--- a/research/index.html
+++ b/research/index.html
@@ -9,8 +9,21 @@ layout: default
       </li>
 
         <li>
-        <a href="{{ site.baseurl }}/_researchPages/contrast_model.md.html"> RoboMirror, a Two-way mirror application</a>
+        <a href="{{ site.baseurl }}/_researchPages/contrast_model.md.html"> Imaging through a Two-way mirror</a>
       </li>
+
+        <li>
+        <a href="{{ site.baseurl }}/_researchPages/zoom_model.md.html"> Hallucinating Zoom Effect </a>
+      </li>
+
+        <li>
+        <a href="{{ site.baseurl }}/_researchPages/resistor_detection_model.md.html"> Resistor, here, there and everywhere</a>
+      </li>
+
+        <li>
+        <a href="{{ site.baseurl }}/_researchPages/cybersecurity_model.md.html"> Hehehe, I got your keeeyyyyy</a>
+      </li>
+
       
       </h3>
 
