Updating link list to include contrast_model_part2 post

--- a/research/index.html
+++ b/research/index.html
@@ -12,6 +12,10 @@ layout: default
         <a href="{{ site.baseurl }}/_researchPages/contrast_model.md.html"> Imaging through a Two-way mirror</a>
       </li>
 
+       <li>
+        <a href="{{ site.baseurl }}/_researchPages/contrast_model_part2.md.html"> Imaging through a Two-way mirror. Part 2</a>
+      </li>
+
         <li>
         <a href="{{ site.baseurl }}/_researchPages/zoom_model.md.html"> Hallucinating Zoom Effect </a>
       </li>
